# TripperDashPlusPlus

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  Secrets.xcconfig.example
tools/fake_dash/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
tools/fake_dash/fake_dash/: __init__.py  __main__.py  buttons.py  control_socket.py  field_crypto.py  maneuver_catalog.py  protocol.py  roundabout_parser.py  rsa_handshake.py  rtp_sink.py  server.py
tools/fake_dash/scripts/: decode_re_capture.py
tools/fake_dash/tests/: __init__.py  driving_side.py  gpx_geometry_mirror.py  maneuver_geometry_mirror.py  maneuver_keywords.py  map_style_resolver.py  solar.py  test_active_nav_order.py  test_arrival_detection.py  test_bg_rolling_extend.py  test_build_sha_stamp.py  test_call_state_pipeline.py  test_composite_coverage.py  test_control_socket.py  test_decode_re_capture.py  test_distance_bucketing.py  test_driving_side.py  test_eta_format_capture.py  test_eta_pipeline.py  test_file_sharing_plist.py  test_gpx_import.py  test_integration.py  test_lateral_buffer.py  test_maneuver_catalog.py  test_maneuver_geometry.py  test_maneuver_keywords.py  test_maneuver_log.py  test_map_style_resolver.py  test_message_notification_pipeline.py  test_nav_autostart.py  test_nav_connect_gate.py  test_nav_instruction_offset.py  test_next_step_index.py  test_next_waypoint_label.py  test_phone_status_pipeline.py  test_position_fallback.py  test_protocol.py  test_reconnect_seq_reset.py  test_reconnect_state_machine.py  test_render_zoom.py  (+16 more)
(+128 files in other folders)
